Fix flicker on hover over person

--- a/src/highlighter.css
+++ b/src/highlighter.css
@@ -109,6 +109,7 @@
     right: -5px;
     float: left;
     z-index: 8;
+    width: 35px;
 }
 #findings-control .fndgs_marker {
     width: 6px;
